--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body {
 
     .container {
         width: 100%;
-        height: 80%;
+        height: 85%;
         overflow: hidden;
     }
 
@@ -193,12 +193,14 @@ body {
     }
 
     .typing-svg{
+        margin-top: 10px;
         margin-left: 90px;
     }
 
     .github-icon,
     .instagram-icon,
     .linkedin-icon {
+        overflow: hidden ;
         margin: 10px 0px 10px 140px;
         width: 53%;
         height: 60px;
